	database connections).

	Point of opinion about this commit: we should utilize transactions more
	often in the code. It helps us avoid corruption and massively speeds up
	INSERTs and UPDATEs:

	http://www.sqlite.org/speed.html:

	At Executive Summary: SQLite works best if you group multiple 
	operations together into a single transaction.

	
2008-06-20  Martyn Russell  <martyn@imendio.com>

	* src/libtracker-db/tracker-db-manager.c: Default to attach_all =
	TRUE for database creation.
	
	* src/trackerd/tracker-main.c: Don't remove the cache directory on
	startup and shutdown, let the database manager handle that.

2008-06-20  Martyn Russell  <martyn@imendio.com>

	* src/libtracker-db/tracker-db-manager.c: Keep a reference to
	each TrackerDBInterface and set the attach_iface to be the first
	one we create and use that to attach all new interfaces we create.
	Also don't create the XESAM database unless we have an
	attach_iface because that is needed. This all works except now the
	Services and Events tables are no longer created so the indexer
	spits out warnings. If we DON'T attach_all when creating the
	databases, the Services table is created but the Events table
	still is not. This needs fixing.

2008-06-20  Martyn Russell  <martyn@imendio.com>

	* data/dbus/tracker-indexer.xml: 
	* src/tracker-indexer/tracker-indexer.[ch]: Removed
	DatabaseReindex and DatabaseCheck, now the daemon ALWAYS makes
	sure the database is ready instead of the indexer.

	* data/sqlite-tracker.sql: Remove the ANALYZE statement after
	creating the tables, this is what was causing the hang when
	attaching ALL databases during creation.
	
	* src/libtracker-db/tracker-db-manager.[ch]: Reworked the way we
	initialise so we create all databases on startup and check for
	each database file too. If even one of them doesn't exist we
	recreate all databases (with the exception of the cache). We also
	don't remove directories now, just the database files when
	cleaning up.
	